<resources>
    <string name="app_name">Portfolio Tracker</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="userName">User Name</string>
    <string name="createAccount">Create Account</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="email">Email</string>
    <string name="addCoin">Add Coin</string>
    <string name="addToken">Add Token</string>
    <string name="coinAmount">Coin Amount:</string>
    <string name="boughtPrice">Bought Price:</string>
    <string name="coinName">Coin Name:</string>
    <string name="coinTicker">Coin Ticker:</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="tokenAmount">Token Amount:</string>
    <string name="tokenName">Token Name:</string>
    <string name="tokenTicker">Token Ticker:</string>
    <string name="manageAccount">Manage Account</string>
    <string name="coin">Coin</string>
    <string name="holdings">Holdings</string>
    <string name="change">Change</string>
    <string name="firsName">First Name</string>
    <string name="lasName">Last Name</string>
    <string name="editInfo">Edit Info</string>
    <string name="notifications">Notifications</string>
    <string name="emailMe">Email Me</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
