<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/headerBackground"
    tools:context="com.lucak.portfolio_tracker.header">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/percentTotal"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_column="1"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView17"

            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/holdings"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="@color/white" />
    </LinearLayout>

</GridLayout>
